--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,9 +1,15 @@
-{{#if message}}
-  <div class="alert alert-dismissable alert-success">
-    <button type="button" class="close" data-dismiss="alert">×</button>
-    {{message}}
-  </div>
-{{/if}}
+{{#contentFor title}}
+  <title>Renu Srinivasan</title>
+{{/contentFor}}
+
+<div id="message">
+  {{#if message}}
+    <div class="alert alert-dismissable alert-success">
+      <button type="button" class="close" data-dismiss="alert">×</button>
+      {{message}}
+    </div>
+  {{/if}}
+</div>
 
 <div class="jumbotron">
   <h1>Welcome!</h1>
