--- a/views/contact.hbs
+++ b/views/contact.hbs
@@ -1,3 +1,7 @@
+{{#contentFor title}}
+  <title>Contact Me</title>
+{{/contentFor}}
+
 <div class="col-lg-10">
   <div class="well">
   <form class="form-horizontal">
