--- a/views/layouts/layout.hbs
+++ b/views/layouts/layout.hbs
@@ -1,8 +1,7 @@
 <!DOCTYPE>  
 <html>  
-  <head>  
-    <title>Renu Srinivasan</title>
-    {{{block head}}}
+  <head>
+    {{{block title}}}
   </head>
 
   <body>
@@ -45,5 +44,16 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
     <link type="text/css" href="//bootswatch.com/yeti/bootstrap.min.css" rel="stylesheet" />
     <link type="text/css" href="/stylesheets/style.css" rel="stylesheet" />
+
+    <script>
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+      ga('create', 'UA-53074849-1', 'auto');
+      ga('require', 'displayfeatures');
+      ga('send', 'pageview');
+    </script>
   </body>
 </html>
