--- a/views/login.hbs
+++ b/views/login.hbs
@@ -1,3 +1,7 @@
+{{#contentFor title}}
+  <title>Login</title>
+{{/contentFor}}
+
 {{#if message}}
   <div class="alert alert-dismissable alert-danger">
     <button type="button" class="close" data-dismiss="alert">×</button>
@@ -5,21 +9,30 @@
   </div>
 {{/if}}
 
-<div class="col-lg-12">
+<div class="col-lg-6">
   <div class="well">
-    <form action="/login" method="post">
-      <div>
-        <label>Username:</label>
-        <input type="text" name="username" />
-        <br/>
-      </div>
-      <div>
-        <label>Password:</label>
-        <input type="password" name="password" />
-      </div>
-      <div>
-        <input type="submit" value="Submit" />
-      </div>
+    <form action="/login" method="post" class="form-horizontal">
+      <fieldset>
+        <div class="form-group">
+          <label for="userName" class="col-lg-2 control-label">Username</label>
+          <div class="col-lg-4">
+            <input type="text" class="form-control" id="userName" placeholder="Username">
+          </div>
+        </div>
+
+        <div class="form-group">
+          <label for="password" class="col-lg-2 control-label">Password</label>
+          <div class="col-lg-4">
+            <input type="password" class="form-control" id="password" placeholder="Password">
+          </div>
+        </div>
+
+        <div class="form-group">
+          <div class="col-lg-6">
+            <button type="submit" class="btn btn-primary">Submit</button>
+          </div>
+        </div>
+      </fieldset>
     </form>
   </div>
 </div>
