--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,6 +1,3 @@
-{{#contentFor title}}
-  <title>Renu Srinivasan</title>
-{{/contentFor}}
 
 <div id="message">
   {{#if message}}
@@ -13,5 +10,5 @@
 
 <div class="jumbotron">
   <h1>Welcome!</h1>
-  <p>This site is under construction. You may visit my <a href="http://www.about.me/renusrinivasan">about me page</a> in the meanwhile!</p>
+  <p>This site is under construction. Leave me a <a href="/contact">message</a>, or visit my <a href="http://www.about.me/renusrinivasan">about.me page</a> in the meanwhile!</p>
 </div>
