--- a/views/contact.hbs
+++ b/views/contact.hbs
@@ -1,28 +1,28 @@
 
 <div class="col-lg-10">
   <div class="well">
-  <form class="form-horizontal">
+  <form class="form-horizontal" method="post" action="/contact">
     <fieldset>
       <legend>Leave a Message!</legend>
       
       <div class="form-group">
         <label for="inputName" class="col-lg-2 control-label">Name</label>
         <div class="col-lg-8">
-          <input type="text" class="form-control" id="inputName" placeholder="Name">
+          <input name="name" type="text" class="form-control" id="inputName" placeholder="Name">
         </div>
       </div>
 
       <div class="form-group">
         <label for="inputEmail" class="col-lg-2 control-label">Email</label>
         <div class="col-lg-8">
-          <input type="text" class="form-control" id="inputEmail" placeholder="Email">
+          <input name="email" type="text" class="form-control" id="inputEmail" placeholder="Email">
         </div>
       </div>
       
       <div class="form-group">
         <label for="textArea" class="col-lg-2 control-label">Message</label>
         <div class="col-lg-8">
-          <textarea class="form-control" rows="3" id="textArea"></textarea>
+          <textarea name="message" class="form-control" rows="3" id="textArea"></textarea>
         </div>
       </div>
       
